--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@mui/material": "^6.1.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "lucide-react": "^0.454.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
